--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
-    "react-simple-toasts": "^3.7.0-beta.0"
+    "react-simple-toasts": "^3.7.0-beta.0",
+    "react-zorm": "^0.9.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
